# opencv-project-erasmus-team

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: EditorModel.cpp.912B91CE8A708415.idx  EditorModel.hpp.DB3940E4FC0F5490.idx  MainWindow.cpp.58E3B360119F9239.idx  MainWindow.hpp.D9592456AA1B4BA7.idx  main.cpp.9D6046E672547F57.idx
include/: AffineCommand.hpp  CLAHECommand.hpp  Command.hpp  EditorModel.hpp  MainWindow.hpp  MorphologyCommand.hpp  PerspectiveCommand.hpp  RotateCommand.hpp  ThresholdCommand.hpp  UndoRedoManager.hpp
src/: EditorModel.cpp  MainWindow.cpp  UndoRedoManager.cpp  main.cpp  mainwindow.ui
